# CrossPlatform_CPP_Calculator

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
CrossPlatform_CPP_Calculator/: CMakeLists.txt  Calculator.h  CrossPlatform_CPP_Calculator.cpp  CrossPlatform_CPP_Calculator.h.in  README.md  calculator_tests.cpp  scientificCalculator_tests.cpp
CrossPlatform_CPP_Calculator/include/: Calculator.h
CrossPlatform_CPP_Calculator/lib/: Calculator.cpp
CrossPlatform_CPP_Calculator/src/: CMakeLists.txt  CrossPlatform_CPP_Calculator.cpp  CrossPlatform_CPP_Calculator.h
CrossPlatform_CPP_Calculator/test/: calculator_tests.cpp  scientificCalculator_tests.cpp
src/: CrossPlatform_CPP_Calculator  CrossPlatform_CPP_CalculatorConfig.h  Makefile  cmake_install.cmake
